--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,217 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+body {
+    background: rgb(202, 220, 192);
+    display: flex;
+    margin: 50px;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+   
 }
+
+.Begining{
+    height: 200px;
+    display: flex;
+    justify-content: flex-start;
+
+}
+
+.LogoandText{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+   }
+
+.Logo{
+    justify-content: flex-start;
+    display: flex;
+    height: 200px;
+    width: 200px;
+}
+
+
+h1 {
+    color: rgb(116, 159, 128);
+    font-size: 85px;
+   
+}
+
+
+h2 {
+    color: rgb(11, 86, 60);
+    padding-top: 1px;
+    margin: 40px;
+
+}
+
+
+
+.navbar{
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+h3{ 
+    padding: 4px;
+    margin: 10px;
+
+}
+
+a:link { 
+    text-decoration: none; 
+    
+    
+}
+
+a {
+    color: rgb(31, 167, 158) !important;
+}
+
+
+.box-one {
+    border-radius: 5px;
+    padding: 1px;
+    margin: 10px;
+    width: 100px;
+    height: 40px;
+    
+  }
+    
+  .box-two{
+    border-radius: 5px;
+    padding: 1px;
+    margin: 10px;
+    width: 100px;
+    height: 40px;
+     
+}
+
+.box-three{
+    border-radius: 5px;
+    padding: 1px;
+    margin: 10px;
+    width: 100px;
+    height: 40px;
+    
+}
+
+.box-four{
+    border-radius: 5px;
+    padding: 1px;
+    margin: 10px;
+    width: 100px;
+    height: 40px;
+    
+}
+
+
+.light{
+    background: rgb(149, 206, 146);
+}
+
+
+
+.big-image {
+    height: 500px;
+    display:flex;
+    padding: 200px;
+    
+}
+
+
+.after.heading{
+    margin: 5px;
+    border: 2px solid;
+    padding: 5px;
+
+}
+
+img {
+    width: 500px;
+    height: 500px;
+    border-radius: 50%;
+    
+}
+
+.big-news{
+    margin: 5px;
+    padding: 100px;
+    width: 500px;
+    height: 500px;
+}
+
+.second-heading{
+     color: rgb(132, 171, 158);
+    font-size: 30px;
+    
+
+}
+
+p{
+    color: rgb(5, 68, 54);
+}
+
+.site-magazine {
+    padding: 2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 1rem;
+
+}
+
+.heading-box {
+    padding: 30px;
+}
+
+
+.green {
+    background: rgb(77, 123, 9);
+}
+
+.Yellow{
+    background: rgb(215, 221, 148);
+
+}
+
+.yellowgreen{
+    background: yellowgreen;
+
+}
+
+.lightgreen {
+    background: lightgreen;
+}
+
+.first{
+    width: 300px;
+    height: 300px;
+    border-radius: 5%;
+
+    }
+    
+
+    /* Tablet */
+@media (min-width: 668px) and (max-width: 1024px) {
+
+  
+  }
+  
+  /* Desktop*/
+  @media (min-width: 1025px) {
+  
+  
+  }
+      
+  
+  /* mobile */
+  @media (min-width: 668px) {
+  
+     
+  }
