--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,59 @@
 html {
-  background: #0025ff;
+  background: #ffffff;
   color: #fff;
+}
+
+.container {
+  display: grid; 
+  grid-template-columns:repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  height: 900px;
+  margin: 10px;
+  gap: 10px;
+  
+}
+
+.grid-item {
+  color: #ffffff;
+  font-size: 20px;
+  text-align: center;
+  padding: 100px;
+}
+
+.item1 {
+  background: deepskyblue;
+  grid-column: span 4;
+}
+
+.item2 {
+  background: orangered;
+  grid-column: 1/3;
+  grid-row: 2/4;
+}
+
+.item3 {
+  background: royalblue;
+}
+
+.item4 {
+  background: gold;
+}
+
+.item5 {
+  background: blueviolet;
+}
+
+.item6 {
+  background: limegreen;
+}
+
+.item7 {
+  background: coral;
+}
+
+.item8 {
+  background: lightseagreen;
+}
+.item9 {
+  background: maroon;
 }
