--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,18 @@
-html {
+body {
   background: #0025ff;
   color: #fff;
+}
+
+@media (min-width: 668px ) and (max-width:1024px) {
+
+  body {
+  background-color: red;
+  }
+  
+}
+
+@media (min-width:1025px) {
+  body {
+    background-color: rgb(238, 255, 0);
+  }
 }
