--- a/code/style.css
+++ b/code/style.css
@@ -1,19 +1,62 @@
 html {
   background: #ffffff;
   color: rgb(0, 0, 0);
+  font-family: 'Mukta', sans-serif;
+}
+
+.body {
+  font-family: 'Mukta', sans-serif;
+}
+
+/* Navigation */
+
+.navigation {
+  display: block;
+  background-color: rgb(255, 255, 255);
+
 }
 
 .nav-container {
   max-width: 667px;
+  width: 100%;
   margin: auto;
-  padding: 15px 20px;
-  margin-top: 30px;
-  display: grid;
-  grid-template-columns: 30% auto;
-  background-color: aqua;
+  box-shadow: 0px 4px 10px rgba(199, 199, 199, 0.137);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  margin-bottom: 10px;
+  background-color: rgb(255, 255, 255);
 }
 
-.main-container {
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/*.slogan {
+ color: black;
+}
+*/
+
+.quotes-slide {
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 667px;
+  width: 100%;
+  height: 300px;
+}
+
+.quote {
+  font-style: italic;
+  color: rgb(0, 0, 0);
+  padding: 50px;
+}
+
+
+.big-news {
   max-width: 667px;
   margin: 0 auto;
 }
@@ -32,13 +75,13 @@ html {
 .featured-container {
   grid-area: bigNews;
   min-height: 250px;
-  background-color: red;
+  background-color: rgb(255, 255, 255);
 }
 
 .sub-container {
   grid-area: otherNews;
   min-height: 200px;
-  background-color: blueviolet;
+  background-color: rgb(255, 255, 255);
 }
 
 .nav-items {
@@ -62,4 +105,4 @@ html {
   padding: 100px;
 }
 
-/* Navigation */
+
