--- a/code/style.css
+++ b/code/style.css
@@ -1,55 +1,61 @@
 html {
-  background: whitesmoke;
+  background: white
   color: black;
-  font-family: sans-serif;
-font-size: 150%;
+  font-family:Arial, Helvetica, sans-serif;
+font-size: 200%;
 }
 
 h1
 {
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  color: rebeccapurple;
+  font-family:Arial, Helvetica, sans-serif;
+  color: gray;
+  font-size: 300%;
+}
+
+h2
+{
+  font-family:Arial, Helvetica, sans-serif;
+  color: gray;
   font-size: 200%;
-  
-  
 }
 
 .grid-parent {
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   display: grid;
   grid-template-rows: repeat(2, 1fr);
-  grid-auto-rows: 60px;
-        grid-gap: 20px;
+ grid-gap: 5px;
         
-  
-}
-
-.div-item {
-  background-color: pink;
 }
 
 .logo{
-  width: 10%;
-   grid-column: 1;
-   grid-row: 1;
-   
+  width: 5%;
+}
+
+.logo-container{
+  text-align: left;
 }
 .top-heading {
   color: rebeccapurple;
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-size: 400%;
-  grid-column: 2;
-   grid-row: 1;
-   
 }
 
+.grid-item {
+  text-align: center;
+}
 
+.big-item {
+  grid-column: span 8;
+}
+
+.navbar{
+  grid-column: 4 / 6;
+  
+}
 
 .nav {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 140%; 
-grid-row: 2;
-grid-column: 2;
+  font-size: 160%; 
 
 }
 
@@ -66,25 +72,29 @@ grid-column: 2;
   color: darkorchid;
 }
 
+.flexbox-parent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
 
 .big-news-container {
-  border: 2px solid black;
-height: 2000; 
+height: 1000px; 
 width: 4000px;
+padding: 100px;
 display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
+flex-direction: row;
+align-items:center;
+justify-content:center;
 text-align: center;
 }
 
 
 .big-news{
-  background-color: white;
-  border: 4px solid;
   padding: 50px 100px;
-  height: 900px;
-  width: 1000px;
+  height: 1200px;
+  width: 1200px;
   display: flex;
   margin: 10px 5px;
   align-items: center;
@@ -138,9 +148,9 @@ text-align: center;
 }
 
 .other-news-container {
-  border: 2px solid black;
   margin: 40px;
-height: 1000px; 
+height: auto;
+width: auto;
 display: flex;
 flex-direction: column;
 align-items: center;
@@ -151,7 +161,7 @@ justify-content: space-evenly;
 
 @media (min-width: 667px) and (max-width: 1024px){
 .other-news-container {
-  height: 700px;
+  height: 400px;
   flex-direction: row;
   flex-wrap: wrap;
 }
