--- a/code/style.css
+++ b/code/style.css
@@ -20,12 +20,20 @@ h2 {
   text-align: center; 
   
 }
+
+h3{
+  text-align: center; 
+}
+
 .navbar {
   grid-column: span 4; 
   background-color: #C3D7FD;
  
 }
 
+p {
+  text-align: center; 
+}
 ul {
   list-style-type: none;
   margin: 0;
@@ -33,12 +41,10 @@ ul {
   overflow: hidden; 
   background-color: #8CB4FF;
   border-radius: 8px; 
+  
 }
 
-li {
-  display: inline;
-  float: left; 
-}
+
 
 li a {
   display: block;
@@ -47,12 +53,11 @@ li a {
   padding: 14px 16px;
   text-decoration: none;
   border-radius: 8px; 
+  float: left; 
 }
-
-
-
 li a:hover {
   background-color: #F9E3BA;
+
 }
 
 .container{
@@ -98,6 +103,8 @@ li a:hover {
 }
 
 
+
+
 .divied {
   grid-column: span 4; 
   grid-row: 5 / 6; 
@@ -127,11 +134,42 @@ li a:hover {
   background-color: #8CB4FF;
 }
 
+.fa {
+  padding: 20px; 
+  font-size: 30px; 
+  width: 30px; 
+  height: 20px; 
+  text-align: center;
+  text-decoration: none; 
+  border-radius: 15px; 
+}
 
+.fa:hover {
+  opacity: 0.7; 
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+
+.last-item1{
+  grid-column:1 /3;
+  grid-row:17 / 20; 
+  height: 80%;
+
+}
+
+.last-item1 img{
+  width: 100%;
+  height: 100%;
+}
 .last-item {
  grid-column: 3 / 5;
- grid-row: 17 / 22; 
- 
+ grid-row: 17 / 20; 
+ height: 80%;
+
   
 }
 
@@ -142,7 +180,7 @@ li a:hover {
 
 .footer {
   grid-column: span 4; 
-  grid-row: 22 / 35;
+  grid-row: 20 / 35;
   
 }
 
@@ -155,11 +193,22 @@ li a:hover {
 
 /* Mobile View */
 @media  (max-width:667px) {
+  
+ li a {
+  float: none; 
+  width: 100%; 
+ }
+
+ h1 {
+  display: none; 
+ }
+  
   .container
   {
       display: flex; 
       flex-direction: column;
   }
+
 
   img {
       max-width: 100%;
@@ -170,11 +219,10 @@ li a:hover {
       background-color: #FDF0FF;
 
   }
-  
 
   .header img{
       max-width: 100%;
-      height: auto; 
+      height: auto;  
   }
 
 
