changes 18th of July

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,26 @@
 html {
-  background: #0025ff;
+  background: #F0EBE3;
   color: #fff;
+}
+
+.site-header {
+  display: flex;
+  margin: 20px; 
+  height: 100px; 
+  background-color:#7D9D9C;
+  align-items: center; 
+  justify-content: space-between;
+}
+
+.logo {
+  margin-left: 40px; 
+}
+
+.navbar {
+  margin-right: 50px;
+}
+
+img {
+  height: 100px;
+  width: 100px;
 }
