--- a/code/style.css
+++ b/code/style.css
@@ -1,26 +1,78 @@
 html {
   background: #F0EBE3;
   color: #fff;
+  font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
 .site-header {
   display: flex;
   margin: 20px; 
-  height: 100px; 
+  height: 300px; 
   background-color:#7D9D9C;
   align-items: center; 
   justify-content: space-between;
 }
 
 .logo {
-  margin-left: 40px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.logo img {
+  padding-top: 40px;
+  height: 150px;
+  width: 150px;
+}
+
+.logo h1 {
+  font-weight: bold;
+  font-family: sans-serif;
+  padding: 0px 0px 40px 20px;
 }
 
 .navbar {
   margin-right: 50px;
+  display: flex;
 }
 
-img {
-  height: 100px;
-  width: 100px;
+.nav-button {
+  height: 50px; 
+  width: 50px;
+}
+
+.big-news-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 100px);
+  margin:20px;
+}
+
+.big-news-item {
+  background-color: #576F72;
+  grid-row: span 3;
+}
+
+.big-news-item img {
+  height: 100%;
+  width: 100%;
+}
+
+.big-news-item h1 {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-left: 20px;
+}
+
+.big-news-item p {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16px;
+  margin-left: 20px;
+}
+
+@media (min-width: 668px) {
+  .big-news-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 2fr, 100px;
+  }
 }
