--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,6 @@
 
 body {
     background: rgb(202, 220, 192);
-    /* margin: 50px; */
     height: 100%;
     flex-direction: column;
     align-items: center;
@@ -125,6 +124,7 @@ p{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 1rem;
+    text-align: center;
 }
 
 
@@ -160,17 +160,42 @@ p{
 
 
     /* mobile */
-  @media (min-width: 668px) {
+  @media (max-width: 668px) {
 
+     body {
+        display: inline-block;
+        margin: 33%;
+        margin-top: -45px;
+    }
+
+     .navbar {
+       justify-content: space-between;
+
+  }
+
+
+     .after-heading{
+         display: inline;
+         margin-left: 50%;
+         margin-bottom: 50%;
+         width: 300px;
+         height: 300px;
+
+}
+
+     .site-magazine{
+        grid-template-columns: 100%;
+
+}
 
 }
 
     /* Tablet */
-@media all and (min-width: 668px) and (max-width: 1024px) {
+@media (min-width: 668px) and (max-width: 1024px) {
 
      body {
         display: inline-block;
-        margin: 100px;
+        margin: 10%;
         margin-top: -20px;
     }
 
@@ -187,7 +212,7 @@ p{
 
     .logoandtext{
        margin-left: 70%;
-      
+
 
   }
 
@@ -205,36 +230,21 @@ p{
          display: inline-block;
          margin-left: 50%;
          margin-bottom: 50%;
-         width: 300px;
-         height: 300px;
+         width: 500px;
+         height: 500px;
 
-         
-}
-
-      .big-image{
-        margin-top: 50px;
-      }   
-
-     .big-news{
-        margin-top: -20px;
-
-}
-
-    .second-heading{
-        margin-left: -10px;
 }
 
      .site-magazine{
-        display: grid;
         margin: 10px;
+        margin-top: -70px;
         grid-template-columns: 100% 100%;
         grid-column-gap: 10px;
 
+}
 
-}  
 
-
-} 
+}
 
 
 
