--- a/code/style.css
+++ b/code/style.css
@@ -52,6 +52,16 @@ body {
   margin: 20px;
 }
 
+.grey-box h2 {
+  font-size: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.grey-box p {
+  font-size: 20px;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 .grey-box img {
   width: 100%;
 }
@@ -73,6 +83,16 @@ body {
     margin: 20px;
   }
 
+  .grey-box h2 {
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  
+  .grey-box p {
+    font-size: 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
   .grey-box img {
     width: 100%;
   }  
@@ -88,11 +108,22 @@ body {
     padding: 20px;
     width: 300px;
   
-    width: 40%;
-    height: 40%;
+    width: 20%;
+    height: 20%;
     justify-content: center;
     margin: 20px;
   }
+
+  .grey-box h2 {
+    font-size: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+  
+  .grey-box p {
+    font-size: 40px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
+
   .grey-box img {
     width: 100%;
   }  
