--- a/code/style.css
+++ b/code/style.css
@@ -1,119 +1,181 @@
 html {
-  background: #ffffff;
-  color: rgb(0, 0, 0);
-  font-family: 'Mukta', sans-serif;
-  display: block;
+  font-family: 'Montserrat', sans-serif;
+  background: rgb(255, 255, 255);
 }
 
-.body {
-  font-family: 'Mukta', sans-serif;
+body {
+  margin: 0;
 }
 
-/* Navigation */
+.wrapper {
+  display: flex;  
+  flex-flow: row wrap;
+  font-weight: normal;
+  text-align: center;
+}
 
-.nav-container {
-  
-  margin: auto;
-  box-shadow: 0px 4px 10px rgba(199, 199, 199, 0.137);
+.wrapper > * {
+  padding: 15px;
+  flex: 1 100%;
+}
+
+/* MENU */
+
+.menu {
+  display: none;
+}
+
+.header {
+  background: rgb(255, 255, 255);
   display: flex;
+  flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
-  flex-direction: row;
-  margin-bottom: 10px;
-  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 5px 10px 0px rgba(138, 134, 134, 0.082);
 }
 
 .logo {
+  width: 100px;
+}
+
+.magazine-name {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 1.2em;
+}
+
+
+
+/* DIVIDERS */
+.divider {
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: center;
-}
-/*.slogan {
- color: black;
-}
-*/
-
-/*quotes*/
-
-.quotes-slide {
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  max-width: 667px;
-  height: auto;
-}
-
-.slide-content {
-  font-style: italic;
-  color: rgb(0, 0, 0);
-  padding: 50px;
-}
-
-/* Featured News*/
-
-.big-news {
-  max-width: 667px;
-  height: auto;
-  display: flex;
-  margin: auto;
-  justify-content: center;
-}
-
-.featured-container {
-  margin: auto;
-  display: flex;
-  max-width: 667px;
-  height: auto;
-  gap: 10px;
-}
-
-
-
-/*
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-areas: 
-  "bigNews bigNews bigNews bigNews"
-  "otherNews otherNews otherNews otherNews" */
-
+  padding: 0 15px 0 15px;
   
+  
+}
+.divider h3 {
+  margin: 0;
+  font-weight: 400;
+  font-size: 1.1em;
+  border-top: 2px solid rgba(0, 0, 0, 0.322);
+  font-family: 'Montserrat', sans-serif;
+}
 
+.line {
+  margin: 0 125px 10px 125px;
+  max-width: 100%;
+  
+  border-top: 2px solid rgba(0, 0, 0, 0.322);
+  font-family: 'Montserrat', sans-serif;
+}
 
-/* Other News */
-.sub1 {
-  /*display: flex;*/
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+/*BIG NEWS*/
+
+.featured-news {
+  text-align: left;
+  background: rgb(255, 255, 255);
+  margin: auto;
+}
+
+video {
+  max-width: 100%;
+}
+
+.featured-article{
+  margin: 10px;
+}
+
+/*OTHER NEWS*/
+
+.other-news {
+  text-align: left;
+  background: rgb(255, 255, 255);
+  margin: auto;
+}
+.other-article {
+  margin: 10px;
+}
+
+img {
   max-width: 100%;
 }
 
 
-.sub-container {
-  grid-area: otherNews;
-  min-height: 200px;
-  background-color: rgb(255, 255, 255);
+.aside-1 {
+  background: gold;
 }
 
-.nav-items {
-  display: none;
+.aside-2 {
+  background: hotpink;
 }
 
 
-@media (min-width: 668px) and (max-width: 1024px){
-
+.footer {
+  background: lightgreen;
 }
 
-@media (min-width: 1025px) {
+/* MEDIA QUERIES */
+
+@media all and (min-width: 667px) {
+
+  .wrapper {
+    font-weight: 400;
+    font-size: 1.5em;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  .other-news { 
+    display: flex;
+    flex-flow: row wrap;
+    align-content: center;
+    justify-content: space-between;
+    gap: 10px;
+  }
+
+  .divider {
+    display: none;
+  }
+
+  .other {
+    max-width: 49%;
+    flex-grow: 1;
+  }
+  
+  .menu {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0;
+    list-style: none;
+    margin: 0;
+    width: 100%;
+  }
+  
+  .menu a {
+    text-decoration: none;
+    display: block;
+    padding: 0;
+    margin-top: .5em;
+    color: rgb(0, 0, 0);
+  }
+  
+  .menu a:hover {
+    transform: scale(1.2);
+    text-shadow: none;
+  }
+
   
 }
 
-/*
-.grid-item {
-  color: #ffffff;
-  font-size: 20px;
-  text-align: center;
-  padding: 100px;
+@media all and (min-width: 1024px) {
+  .featured-news { flex: 3 0px; }
+  .aside-1 { order: 1; } 
+  .main { order: 2; }
+  .aside-2 { order: 3; }
+  .footer  { order: 4; }
 }
 
-*/
